// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button image 1`] = `
<button
  className="button-image button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button image-circle 1`] = `
<button
  className="button-image button-image--circle button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button text 1`] = `
<button
  className="button button--primary"
  onClick={[Function]}
  type="button"
>
  Manage Currencies
</button>
`;

exports[`Storyshots Card long 1`] = `
<li
  className="card"
>
  <div
    className="card__header"
  >
    <p
      className="medium"
    >
      KM
    </p>
    <p
      className="large"
    >
      BAM
    </p>
  </div>
  <p
    className="medium"
  >
    Bosnia-Herzegovina Convertible Mark
  </p>
  <p
    className="large"
  >
    1 NGN - 1587 BAM
  </p>
</li>
`;

exports[`Storyshots DropdownInput another flavour 1`] = `
<div
  className="dropdown-input dropdown-input--r"
>
  <input
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;

exports[`Storyshots DropdownInput plain 1`] = `
<div
  className="dropdown-input "
>
  <input
    list="currecency"
    maxLength={35}
    name="random"
    onChange={[Function]}
    placeholder="NGN"
    type="text"
    value=""
  />
  <datalist
    id="currecency"
  >
    <option
      value="NGN"
    >
      NGN
    </option>
    <option
      value="USD"
    >
      USD
    </option>
    <option
      value="EUR"
    >
      EUR
    </option>
    <option
      value="BAM"
    >
      BAM
    </option>
  </datalist>
  <img
    alt="dropdown logo"
    src="dropdown.svg"
  />
</div>
`;
